--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -154,15 +154,22 @@
     /* overflow: hidden; */
   }
 }
+
+@media screen and (min-width: 768px) {
+  .SubdomainNavBar-primary-nav-list {
+    max-width: 100px;
+  }
+}
+
 @media screen and (min-width: 850px) {
   .SubdomainNavBar-primary-nav-list {
-    max-width: 320px;
+    max-width: 200px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .SubdomainNavBar-primary-nav-list {
-    max-width: 340px;
+    max-width: 300px;
   }
 }
 
@@ -475,12 +482,6 @@
 .SubdomainNavBar-cta-button {
   height: 48px; /*TODO: investigate why this is shorter than medium default height*/
   white-space: nowrap;
-}
-
-@media screen and (min-width: 48rem) and (max-width: 1023px) {
-  .SubdomainNavBar-cta-button--secondary {
-    display: none;
-  }
 }
 
 @media screen and (min-width: 1024px) {
