Adjust grid row layout

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -16,6 +16,8 @@
     'heading heading'
     'description description'
     'action action';
+  flex: auto;
+  grid-template-rows: auto auto auto 1fr;
 }
 
 .Card--has-icon {
