--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -452,7 +452,7 @@
   gap: 16px;
 }
 
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 767px) {
   .SubdomainNavBar-button-area {
     display: none;
   }
