Add `Card.Image` (#253)
* Add `Card.Image` to Card

* Add Card stories and tests

---------

Co-authored-by: josepmartins <josepmartins@users.noreply.github.com>
Co-authored-by: Rez <rezrah@github.com>

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -11,17 +11,19 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
+    'image image'
     'icon icon'
     'label label'
     'heading heading'
     'description description'
     'action action';
   flex: auto;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
 }
 
 .Card--has-icon {
   grid-template-areas:
+    'image image'
     'icon label'
     'heading heading'
     'description description'
@@ -39,6 +41,18 @@
 
 .Card:hover {
   transform: scale3d(1.025, 1.025, 1);
+}
+
+.Card__image {
+  margin-bottom: var(--base-size-28);
+  border-radius: var(--brand-borderRadius-small);
+  overflow: hidden;
+  grid-area: image;
+}
+
+.Card__image img,
+.Card__image span {
+  display: block;
 }
 
 .Card__icon {
