--- a/packages/react/src/River/River.module.css
+++ b/packages/react/src/River/River.module.css
@@ -1,9 +1,9 @@
 .River {
   display: grid;
-  gap: var(--brand-River-small-gap);
+  gap: var(--brand-River-spacing-inner);
   grid-auto-rows: min-content;
-  padding-top: var(--brand-River-small-padding);
-  padding-bottom: var(--brand-River-small-padding);
+  padding-top: var(--brand-River-spacing-outer);
+  padding-bottom: var(--brand-River-spacing-outer);
 }
 
 .River--align-center {
@@ -38,13 +38,10 @@
   color: var(--brand-color-text-default);
 }
 
-/* Small breakpoint and up */
-@media screen and (min-width: 34rem) {
+/* Medium breakpoint and up */
+@media screen and (min-width: 48rem) {
   .River {
     grid-template-rows: unset;
-    gap: var(--brand-River-medium-gap);
-    padding-top: var(--brand-River-medium-padding);
-    padding-bottom: var(--brand-River-medium-padding);
   }
   .River--50-50 {
     grid-template-columns: [content] 1fr [visual] 1fr;
@@ -98,14 +95,5 @@
   }
   .River--align-center .River__content {
     margin-top: var(--base-size-48);
-  }
-}
-
-/* Large breakpoint and up */
-@media screen and (min-width: 63.25rem) {
-  .River {
-    gap: var(--brand-River-large-gap);
-    padding-top: var(--brand-River-large-padding);
-    padding-bottom: var(--brand-River-large-padding);
   }
 }
