--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -1,15 +1,15 @@
 .Grid {
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-row-gap: var(--grid-spacing-row);
-  grid-column-gap: var(--grid-spacing-column-gap);
-  padding-inline: var(--grid-spacing-margin);
+  grid-row-gap: var(--brand-Grid-spacing-row);
+  grid-column-gap: var(--brand-Grid-spacing-column-gap);
+  padding-inline: var(--brand-Grid-spacing-margin);
   max-width: 1280px;
   margin: 0 auto;
 }
 
 .Grid + .Grid {
-  margin-top: var(--grid-spacing-row);
+  margin-top: var(--brand-Grid-spacing-row);
 }
 
 .Grid .Grid {
@@ -22,7 +22,7 @@
 }
 
 .Grid--has-overlay .Grid__column {
-  background-color: var(--grid-column-bgColor-overlay);
+  background-color: var(--brand-Grid-column-bgColor-overlay);
   min-height: var(--base-size-24);
 }
 
