Added polymorphism to the Minimal Footer link element

--- a/packages/react/src/MinimalFooter/MinimalFooter.module.css
+++ b/packages/react/src/MinimalFooter/MinimalFooter.module.css
@@ -93,6 +93,11 @@
   align-self: flex-start;
   color: var(--brand-color-text-muted);
   text-decoration: none;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  background-color: inherit;
+  cursor: pointer;
   border-bottom: var(--brand-borderWidth-thin) solid transparent;
   padding-bottom: var(--base-size-4);
   transition: border 300ms cubic-bezier(0.33, 1, 0.68, 1);
