--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -107,6 +107,10 @@
   white-space: nowrap;
 }
 
+.SubdomainNavBar-title:hover {
+  text-decoration: none;
+}
+
 /*
  * Primary navigation link area
  */
@@ -228,6 +232,10 @@
   font-size: var(--base-size-20);
   line-height: var(--base-size-20);
   padding: var(--base-size-8) var(--base-size-16) var(--base-size-16) var(--base-size-28);
+  text-decoration: none;
+}
+
+.SubdomainNavBar-link:hover {
   text-decoration: none;
 }
 
@@ -617,6 +625,10 @@
   font-weight: var(--brand-heading-weight-400);
   font-family: var(--brand-heading-fontFamily);
   line-height: var(--brand-text-lineHeight-400);
+}
+
+.SubdomainNavBar-search-result-item-container a:hover {
+  text-decoration: none;
 }
 
 .SubdomainNavBar-search-result-item-desc {
