--- a/packages/react/src/AnimationProvider/AnimationProvider.module.css
+++ b/packages/react/src/AnimationProvider/AnimationProvider.module.css
@@ -1,12 +1,5 @@
-:root {
-  --animation-default-duration: 0.6s;
-  --animation-default-ease: cubic-bezier(0.16, 1, 0.3, 1);
-  --animation-default-transition: opacity var(--animation-default-duration) var(--animation-default-ease),
-    transform var(--animation-default-duration) var(--animation-default-ease);
-}
-
 .Animation {
-  transition: var(--animation-default-transition);
+  transition: var(--brand-animation-transition-default);
 }
 
 /**
@@ -17,7 +10,7 @@
 }
 
 .Animation--fade-in.Animation--active {
-  animation: fade-in var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: fade-in var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes fade-in {
@@ -37,7 +30,7 @@
 }
 
 .Animation--fade-out.Animation--active {
-  animation: fade-out var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: fade-out var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes fade-out {
@@ -57,7 +50,7 @@
 }
 
 .Animation--slide-in-up.Animation--active {
-  animation: slide-in-up var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: slide-in-up var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes slide-in-up {
@@ -79,7 +72,7 @@
 }
 
 .Animation--slide-down.Animation--active {
-  animation: slide-down var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: slide-down var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes slide-down {
@@ -101,7 +94,7 @@
 }
 
 .Animation--slide-in-left.Animation--active {
-  animation: slide-in-left var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: slide-in-left var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes slide-in-left {
@@ -123,7 +116,7 @@
 }
 
 .Animation--slide-in-right.Animation--active {
-  animation: slide-in-right var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: slide-in-right var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes slide-in-right {
@@ -145,7 +138,7 @@
 }
 
 .Animation--scale-in.Animation--active {
-  animation: scale-in 0.7s var(--animation-default-ease) forwards;
+  animation: scale-in var(--brand-animation-duration-extended) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in {
@@ -167,7 +160,7 @@
 }
 
 .Animation--scale-in-up.Animation--active {
-  animation: scale-in-up 0.7s var(--animation-default-ease) forwards;
+  animation: scale-in-up var(--brand-animation-duration-extended) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in-up {
@@ -189,7 +182,7 @@
 }
 
 .Animation--scale-in-down.Animation--active {
-  animation: scale-in-down 0.7s var(--animation-default-ease) forwards;
+  animation: scale-in-down var(--brand-animation-duration-extended) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in-down {
@@ -211,7 +204,7 @@
 }
 
 .Animation--scale-in-right.Animation--active {
-  animation: scale-in-right var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: scale-in-right var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in-right {
@@ -233,7 +226,7 @@
 }
 
 .Animation--scale-in-left.Animation--active {
-  animation: scale-in-left 0.7s var(--animation-default-ease) forwards;
+  animation: scale-in-left var(--brand-animation-duration-extended) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in-left {
@@ -256,7 +249,7 @@
 }
 
 .Animation--fill-in-right.Animation--active {
-  animation: fill-in-right var(--animation-default-duration) var(--animation-default-ease) forwards;
+  animation: fill-in-right var(--brand-animation-duration-default) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes fill-in-right {
@@ -278,7 +271,7 @@
 }
 
 .Animation--scale-in-top.Animation--active {
-  animation: scale-in-top 0.7s var(--animation-default-ease) forwards;
+  animation: scale-in-top var(--brand-animation-duration-extended) var(--brand-animation-easing-default) forwards;
 }
 
 @keyframes scale-in-top {
