--- a/packages/react/src/Link/Link.module.css
+++ b/packages/react/src/Link/Link.module.css
@@ -21,7 +21,7 @@
   height: 2px;
   pointer-events: none;
   content: '';
-  background-color: var(--brand-color-text-default);
+  background-color: currentColor;
   transform: scaleX(0);
   transform-origin: 0 0;
 }
