--- a/packages/react/src/Link/Link.module.css
+++ b/packages/react/src/Link/Link.module.css
@@ -6,7 +6,6 @@
   transition: box-shadow 0.2s;
   text-decoration: none;
   cursor: pointer;
-  color: var(--brand-color-text-default);
 }
 
 .Link:hover {
@@ -40,6 +39,14 @@
 
 .Link:focus {
   outline: 0;
+}
+
+.Link--default {
+  color: var(--brand-Link-color-default);
+}
+
+.Link--accent {
+  color: var(--brand-Link-color-accent);
 }
 
 .Link--label {
