--- a/packages/react/src/Link/Link.module.css
+++ b/packages/react/src/Link/Link.module.css
@@ -6,7 +6,6 @@
   transition: box-shadow 0.2s;
   text-decoration: none;
   cursor: pointer;
-  color: var(--brand-color-text-default);
 }
 
 .Link:hover {
@@ -21,7 +20,7 @@
   height: 2px;
   pointer-events: none;
   content: '';
-  background-color: var(--brand-color-text-default);
+  background-color: currentColor;
   transform: scaleX(0);
   transform-origin: 0 0;
 }
@@ -40,6 +39,16 @@
 
 .Link:focus {
   outline: 0;
+}
+
+.Link--default,
+.Link--default span {
+  color: var(--brand-Link-color-default);
+}
+
+.Link--accent,
+.Link--accent span {
+  color: var(--brand-Link-color-accent);
 }
 
 .Link--label {
