--- a/packages/react/src/Pillar/Pillar.module.css
+++ b/packages/react/src/Pillar/Pillar.module.css
@@ -24,8 +24,19 @@
   margin-bottom: var(--base-size-4);
 }
 
+/* Overrides the default size 6 to have a smaller font size, using 300 values instead of 400 */
+.Pillar__heading.Pillar__heading--size-6 {
+  font-size: var(--brand-text-size-300);
+  line-height: var(--brand-text-lineHeight-300);
+  letter-spacing: var(--brand-heading-letterSpacing-300);
+}
+
 .Pillar__description {
   color: var(--brand-color-text-muted);
+}
+
+.Pillar__link {
+  margin-top: var(--base-size-8);
 }
 
 .Pillar__icon--color-default {
